[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu/pause_menu_background.jpg" type="Texture" id=1]
[ext_resource path="res://Menu/Pause.gd" type="Script" id=2]
[ext_resource path="res://Menu/selector.png" type="Texture" id=3]
[ext_resource path="res://Menu/keymap.jpg" type="Texture" id=4]

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundKeys" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectorPlay" type="TextureRect" parent="."]
margin_left = 1521.0
margin_top = 723.0
margin_right = 1587.0
margin_bottom = 789.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectorOptions" type="TextureRect" parent="."]
visible = false
margin_left = 1521.0
margin_top = 772.0
margin_right = 1587.0
margin_bottom = 838.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectorExit" type="TextureRect" parent="."]
visible = false
margin_left = 1521.0
margin_top = 823.0
margin_right = 1587.0
margin_bottom = 889.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1553.0
margin_top = 733.0
margin_right = 1784.0
margin_bottom = 781.0
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Options")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1553.0
margin_top = 786.0
margin_right = 1784.0
margin_bottom = 834.0
focus_neighbour_top = NodePath("../Play")
focus_neighbour_bottom = NodePath("../Exit")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1553.0
margin_top = 838.0
margin_right = 1784.0
margin_bottom = 886.0
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Play")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectorBack" type="TextureRect" parent="."]
margin_left = 77.0
margin_top = 818.0
margin_right = 143.0
margin_bottom = 884.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 128.0
margin_top = 798.0
margin_right = 309.0
margin_bottom = 912.0
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Options")
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="Play" to="." method="_on_Play_focus_entered"]
[connection signal="focus_exited" from="Play" to="." method="_on_Play_focus_exited"]
[connection signal="mouse_entered" from="Play" to="." method="_on_Play_mouse_entered"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="focus_entered" from="Options" to="." method="_on_Options_focus_entered"]
[connection signal="focus_exited" from="Options" to="." method="_on_Options_focus_exited"]
[connection signal="mouse_entered" from="Options" to="." method="_on_Options_mouse_entered"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="focus_entered" from="Exit" to="." method="_on_Exit_focus_entered"]
[connection signal="focus_exited" from="Exit" to="." method="_on_Exit_focus_exited"]
[connection signal="mouse_entered" from="Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
